Fix Image sizing issue on Safari

--- a/style.css
+++ b/style.css
@@ -63,7 +63,7 @@ button{
 }
 img{
     max-height: 10vh;
-    width:fit-content;
+    width:auto;
     align-self: center;
 }
 h1{
